--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ ul.header li {
   margin: 0;
 }
 ul.header {
-  background-color: #fcf7f7;
+  background-color: #faf06d;
   padding: 0;
 }
 ul.header li a {
@@ -29,14 +29,39 @@ ul.header li a:hover {
   padding: 20px;
   display: inline-block;
 }
+.content li {
+  color: #050505;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 20px;
+  display: inline-block;
+
+}
+.content li:hover {
+  color: #ec2323;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 20px;
+  display: inline-block;
+
+}
 .content {
-  background-color: #FFF;
+  background-color: #ffffff;
   padding: 20px;
 }
 .content h2 {
   padding: 0;
   margin: 0;
+
 }
+.content h3 {
+  color: #050505;
+  text-decoration: none;
+  padding: 20px;
+  margin-left: 40px;
+
+}
+
 .content li {
   margin-bottom: 10px;
 }
